# hifumi

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  README_zh.md  justfile
.github/: copilot-instructions.md
.github/workflows/: clippy.yml  fmt.yml  publish.yml  test.yml
