[workspace]
members = ["packages/macros", "packages/types"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]

version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqids = "^0.4"
